--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+package-lock.json
+debug.log
+
 # dependencies
 /node_modules
 /.pnp
@@ -22,3 +25,4 @@ debug.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.vscode/settings.json
